z-index fix

--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -66,7 +66,7 @@ body
 			top: 188px
 			left: 0
 			right: 77px
-			z-index: 1000
+			z-index: 950
 			background: #fff 
 			opacity: 1
 			+box-shadow(none)
@@ -150,7 +150,7 @@ a
 	top: 0
 	left: 0
 	right: 0
-	z-index: 5000
+	z-index: 950
 	min-width: 1024px
 	height: 77px	
 	background: #fff 
@@ -186,7 +186,7 @@ a
 	display: inline-block
 	width: 77px
 	height: 77px
-	z-index: 2000
+	z-index: 900
 	background: $yell_d
 	+tr
 	overflow: visible
@@ -208,7 +208,7 @@ a
 	top: 100%
 	left: 0
 	right: 77px
-	z-index: 1000
+	z-index: 950
 	background: #fff 
 	opacity: 0
 	+box-shadow(0 0 10px rgba(#000,.6))
@@ -295,7 +295,7 @@ a
 	top: 0
 	bottom: 0
 	right: 77px
-	z-index: 2000
+	z-index: 900
 	left: 77px
 	a
 		display: block
@@ -315,7 +315,7 @@ a
 	right: 0
 	top: 0
 	bottom: 0
-	z-index: 2001
+	z-index: 901
 	width: 77px
 	+box
 	&.is-active
