--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -17,7 +17,7 @@
         position: absolute
         top: 50%
         margin-top: -25px
-        z-index: 1000
+        z-index: 900
         opacity: .5
         &:hover  
             opacity: 1
@@ -124,7 +124,7 @@
     .fotorama__arr
         position: absolute
         top: 63px
-        z-index: 1000
+        z-index: 900
     .fotorama__arr--prev
         left: 30px
     .fotorama__arr--next
