--- a/sass/_popup.sass
+++ b/sass/_popup.sass
@@ -5,7 +5,7 @@
 	right: 0
 	left: 0
 	bottom: 0
-	z-index: 20000
+	z-index: 950
 	background: $red 
 	background: rgba($red,.9)
 	text-align: center
@@ -37,7 +37,7 @@
 		.btn-action
 			margin-top: 14px
 			padding: 17px 28px 15px 
-			width: 100%
+			width: 100%    
 		.forgot-pass   
 			right: 8px
 			top: 30px
